test/bad/functions/call07.px

func f(Int x: 0) def
    return

f(y=2)
